[gd_scene load_steps=5 format=3 uid="uid://d4j4nm31c6y0"]

[ext_resource type="Script" path="res://screens/HistoryViewer.gd" id="1"]
[ext_resource type="PackedScene" path="res://userInterface/But_ChangeScene.tscn" id="2"]
[ext_resource type="Theme" path="res://assets/ui_controlNode_dark_theme.tres" id="3"]
[ext_resource type="Script" path="res://screens/But_HistoryPager.gd" id="4"]

[node name="HistoryViewer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("3")
script = ExtResource("1")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 2

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2

[node name="ItemList" type="ItemList" parent="Background/MarginContainer/Rows"]
layout_mode = 2

[node name="But_ChangeScene" parent="Background/MarginContainer/Rows/ItemList" instance=ExtResource("2")]
layout_mode = 0
text = "More Options"

[node name="But_HistoryPager" type="Button" parent="Background/MarginContainer/Rows/ItemList"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
text = "History Pager"
script = ExtResource("4")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background/MarginContainer/Rows/ItemList"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
text = "History Page:"

[node name="Page_Display" type="Label" parent="Background/MarginContainer/Rows/ItemList"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0

[node name="GameInfo" type="PanelContainer" parent="Background/MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3

[node name="CurrentHistory" type="VBoxContainer" parent="Background/MarginContainer/Rows/GameInfo"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="button_up" from="Background/MarginContainer/Rows/ItemList/But_HistoryPager" to="Background/MarginContainer/Rows/ItemList/But_HistoryPager" method="_on_But_HistoryPager_button_up"]
